<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calendar_drawer"
    android:fitsSystemWindows="true"
    tools:context=".main.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cal_main_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/calendar_label"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/cal_prev_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/cal_next_month"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/dcal_date_lbl"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/cal_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cal_prev_month"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_arrow_forward" />
        </LinearLayout>

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cal_add_split" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cal_label_sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="40dp"
                android:text="@string/cal_label_sun"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cal_label_mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="40dp"
                android:text="@string/cal_label_mon"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cal_label_tues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="40dp"
                android:text="@string/cal_label_tues"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cal_label_wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="40dp"
                android:text="@string/cal_label_wed"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cal_label_thurs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="40dp"
                android:text="@string/cal_label_thurs"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cal_label_fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="40dp"
                android:text="@string/cal_label_fri"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cal_label_sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="40dp"
                android:text="@string/cal_label_sat"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cal_calendar_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/calendar_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>